fixed the connect SVG styles, so now the o and e are no longer invisible

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,16 @@
   transform: translate(65px, 180px);
 }
 
+.connectLogo .cls-1,
+.connectLogo .cls-2,
+.connectLogo .cls-3,
+.connectLogo .cls-4 {
+  stroke-opacity: 1;
+  fill-opacity: 1;
+  stroke: none;
+  font-family: inherit;
+}
+
 .burgerIcon {
   @apply w-10 h-6 mr-16 mt-16 fill-current;
 }
@@ -90,6 +100,30 @@
   @apply px-4 py-2 text-FCCgray-100 border border-white rounded;
 }
 
+footer {
+  height: 30em;
+}
+
+.footerNav {
+  @apply flex flex-col h-full justify-between p-0 mx-auto text-sm;
+}
+
+.socials {
+  height: 40%;
+  @apply flex flex-row w-full bg-FCCblue-100 border-t border-FCCblue-200;
+}
+
+.emailAndCopyright {
+  height: 60%;
+  @apply flex flex-col top-0 bg-FCCblue-200;
+}
+
+.connectLogo {
+  transform: translateY(-7.45em);
+  margin-left: 1em;
+  width: 17em;
+}
+
 @screen md {
   .logo {
     @apply h-32 w-48 ml-16 mt-8;
@@ -105,5 +139,12 @@
   }
   .navMenuButton {
     @apply hidden;
+  }
+  .socials,
+  .emailAndCopyright {
+    height: 50%;
+  }
+  body {
+    @apply bg-FCCblue-100;
   }
 }
